--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -24,6 +24,9 @@
           &.twitter:hover {
             color: rgb(56, 161, 243);
           }
+          &.github:hover {
+            color: rgb(51, 51, 51);
+          }
           &.google:hover {
             color: rgb(221, 75, 57);
           }
