--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -4,4 +4,9 @@ $site-font: 'Raleway', sans-serif;
 
 $light-gray: rgb(240, 240, 240);
 $dark-gray: rgb(80, 80, 80);
+$dark-mode:  #252627;
+$dark-background: #000000;
+$switch-black: black;
+$switch-silver: silver;
 $white: white;
+$silver-color: #dfdfdf;
