--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css?family=Raleway');
 
-$site-font: 'Raleway', sans-serif;
+$site-font: 'Roboto', sans-serif;
+// 'Fira Code', monospace;
+// 'Raleway', sans-serif;
 
 $light-gray: rgb(240, 240, 240);
 $dark-gray: rgb(80, 80, 80);
