--- a/src/styles/_scroll.scss
+++ b/src/styles/_scroll.scss
@@ -1,21 +1,23 @@
 .scroll {
-  // opacity: 0.8;
-  background-color: $switch-silver;
+  background-color: $dark-mode;
   width: 3em;
   height: 3em;
   position: fixed;
-  bottom: 10px;
+  bottom: 25px;
   right: 30px;
-  border-radius: 5px;
+  border-radius: 50%;
   border: none;
-  
+  // box-shadow: 0px 5px 40px rgba(black, .8);
+
   &:hover {
     opacity: 0.5;
+    box-shadow: 0 0 0 5px rgba(#fff,.4) , 0 0 0 10px  #bec4e2;
   }
 }
 
 .fa {
-  color: $dark-mode !important;
+  color: $switch-silver;
+  font-size: 1.3em;
   font-weight: 900;
 }
 
@@ -23,6 +25,6 @@
   position: absolute;
   top: 50%;
   left: 50%;
-  margin-top: -9px;
-  margin-left: -5px;
+  margin-top: -11px;
+  margin-left: -8px;
 }
