edited about page

--- a/src/styles/_card.scss
+++ b/src/styles/_card.scss
@@ -1,5 +1,12 @@
 .card {
   margin-bottom: 30px;
+  
+  .list {
+    ul {
+      margin-left: 1em;
+      list-style-type: disc;
+    }
+  }
 }
 
 ul.post-tags {
