--- a/src/styles/_sidebar.scss
+++ b/src/styles/_sidebar.scss
@@ -18,6 +18,9 @@
         &.twitter:hover {
           color: rgb(56, 161, 243);
         }
+        &.github:hover {
+          color: rgb(51, 51, 51);
+        }
         &.google:hover {
           color: rgb(221, 75, 57);
         }
